# Rust

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  liquidation_log.csv
contracts/: LiquidationExecutor.sol
include/cache/: decimals_cache.hpp
include/common/: config_manager.hpp  logger.hpp
include/config/: network.hpp
include/constants/: polygon.hpp
include/crypto/: keccak.hpp  secp256k1.hpp
include/encoding/: rlp.hpp
include/gas/: gas_strategy.hpp
include/liquidation/: active_user_index.hpp  executor_abi.hpp  hf_scanner.hpp  liquidation_manager.hpp  precompute_cache.hpp  preexec_cache.hpp  watchlist.hpp
include/mev/: protection.hpp
include/net/: block_watcher.hpp  http_client.hpp  multi_relay.hpp  ws_client.hpp
include/node_connection/: rpc_client.hpp
include/oracle/: price_oracle.hpp  reserve_params.hpp
include/profit/: consolidator.hpp
include/protocols/: aave_v3.hpp  erc20.hpp
include/routing/: dex_router.hpp  reserves_cache.hpp
include/scheduler/: cpu_affinity.hpp  gas_escalator.hpp  thread_pool.hpp
include/telemetry/: csv_logger.hpp  structured_logger.hpp  telegram_notifier.hpp
include/utils/: hex.hpp  json_rpc.hpp
include/wallet/: nonce_manager.hpp  signer.hpp
rust-sidecar/: .gitignore  README.md
rust-sidecar/src/dex/balancer/: math.rs
rust-sidecar/src/dex/curve/: math.rs
rust-sidecar/src/dex/kyber/: math.rs
rust-sidecar/src/dex/uniswap_v2/: math.rs
rust-sidecar/src/dex/uniswap_v3/: math.rs
scripts/: deploy_executor_light.py
src/: main.cpp
src/cache/: decimals_cache.cpp
src/common/: config_manager.cpp  logger.cpp
src/config/: network.cpp
src/crypto/: keccak.cpp  secp256k1.cpp
src/encoding/: rlp.cpp
src/gas/: gas_strategy.cpp
src/liquidation/: executor_abi.cpp  hf_scanner.cpp  liquidation_manager.cpp  precompute_cache.cpp  watchlist.cpp
src/mev/: protection.cpp
src/net/: block_watcher.cpp  http_client_curl.cpp  multi_relay.cpp  ws_client.cpp
src/node_connection/: rpc_client.cpp
src/oracle/: price_oracle.cpp  reserve_params.cpp
src/profit/: consolidator.cpp
src/protocols/: aave_v3.cpp  erc20.cpp
src/routing/: dex_router.cpp  reserves_cache.cpp
src/scheduler/: gas_escalator.cpp  thread_pool.cpp
src/telemetry/: csv_logger.cpp  structured_logger.cpp  telegram_notifier.cpp
src/utils/: json_rpc.cpp
src/wallet/: nonce_manager.cpp  signer.cpp
